# qtutilities

./: .gitignore  CMakeLists.txt  README.md  global.h  qtutilities.doxygen  qtutilities.pro
aboutdialog/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui
cmake/modules/: AndroidApk.cmake  JsProviderConfig.cmake  QtConfig.cmake  QtGuiConfig.cmake  QtJsProviderConfig.cmake  QtLinkage.cmake  QtWebViewProviderConfig.cmake  WebViewProviderConfig.cmake
cmake/templates/: android-deployment.json.in  jsdefs.h.in  jsincludes.h.in  qtconfig.h.in  webviewdefs.h.in  webviewincludes.h.in
enterpassworddialog/: enterpassworddialog.cpp  enterpassworddialog.h  enterpassworddialog.ui
misc/: adoptlocker.h  compat.h  conversion.h  dbusnotification.cpp  dbusnotification.h  desktoputils.cpp  desktoputils.h  dialogutils.cpp  dialogutils.h  disablewarningsmoc.h  importplugin.h  recentmenumanager.cpp  recentmenumanager.h  trylocker.h  undefxmlparsermacros.h  xmlparsermacros.h
models/: checklistmodel.cpp  checklistmodel.h
paletteeditor/: colorbutton.cpp  colorbutton.h  paletteeditor.cpp  paletteeditor.h  paletteeditor.ui
pkgbuild/default/: PKGBUILD
pkgbuild/mingw-w64/: PKGBUILD
resources/: importplugin.h  qtconfigarguments.cpp  qtconfigarguments.h  qtutilsicons.qrc  resources.cpp  resources.h
resources/icons/hicolor/16x16/actions/: edit-error.xcf
scripts/: required_icons.sh  svg_to_png.sh
settingsdialog/: optioncategory.cpp  optioncategory.h  optioncategoryfiltermodel.cpp  optioncategoryfiltermodel.h  optioncategorymodel.cpp  optioncategorymodel.h  optionpage.cpp  optionpage.h  optionpage.ui.template  qtappearanceoptionpage.ui  qtenvoptionpage.ui  qtlanguageoptionpage.ui  qtsettings.cpp  qtsettings.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
setup/: signature.cpp  signature.h  updateoptionpage.ui  updater.cpp  updater.h  verification.h
testfiles/: api.github.com--repos-Martchus-syncthingtray-releases-per_page=25.txt
testfiles/setup/: releases.json
testfiles/setup/data8/c/: -1xmvebl.d
tests/: buttonoverlay.cpp  dbusnotification.cpp  dialogs.cpp  mockreply.cpp  mockreply.h  setup.cpp
translations/: qtutilities_de_DE.ts  qtutilities_en_US.ts  qtutilities_fr_FR.ts  qtutilities_ja_JP.ts  qtutilities_ru_RU.ts  qtutilities_zh_CN.ts
widgets/: buttonoverlay.cpp  buttonoverlay.h  clearcombobox.cpp  clearcombobox.h  clearlineedit.cpp  clearlineedit.h  clearplaintextedit.cpp  clearplaintextedit.h  clearspinbox.cpp  clearspinbox.h  iconbutton.cpp  iconbutton.h  pathselection.cpp  pathselection.h
